Allowing seed and polishing

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -33,3 +33,19 @@
     }
 }
 
+.input {
+    width: 5ch;
+    border: none;
+    color: #000;
+    font-weight: 300;
+}
+
+.input:focus {
+    outline: none;
+}
+
+.btn {
+    display: inline;
+    padding: 0.5em 1em;
+}
+
