--- a/docs/_includes/nav_footer_custom.html
+++ b/docs/_includes/nav_footer_custom.html
@@ -1,3 +1,4 @@
 <footer class="site-footer">
-    <a href="https://github.com/eyal-sasson/music-rnn">MusicRNN</a> by <a href="https://github.com/eyal-sasson">Eyal Sasson</a>
+    <a href="https://github.com/eyal-sasson/music-rnn">MusicRNN</a> by <a href="https://github.com/eyal-sasson">Eyal Sasson</a> 
+    <button id="toggle-dark-mode" class="btn btn-outline fs-4 mx-1"><i class="fa-solid fa-moon"></i></button> 
 </footer>
