--- a/docs/_includes/nav_footer_custom.html
+++ b/docs/_includes/nav_footer_custom.html
@@ -2,3 +2,5 @@
     <a href="https://github.com/eyal-sasson/music-rnn">MusicRNN</a> by <a href="https://github.com/eyal-sasson">Eyal Sasson</a> 
     <button id="toggle-dark-mode" class="btn btn-outline fs-4 mx-1"><i class="fa-solid fa-moon"></i></button> 
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/abcjs@6.1.9/dist/abcjs-basic-min.js"></script>
+<script src="{{ '/assets/js/util.js' | relative_url }}"></script>
